[package]
name = "sibyl"
version = "0.1.0"
authors = ["matt wyatt <mwyatt1000@gmail.com>"]
edition = "2018"


[dependencies]
anyhow = "1.0"
bincode = "1.3.2"
chrono = {version = "0.4.19", features = ["serde"] }
clap = {version = "~2.27.0", features = ["yaml"]}
ctrlc = "3.1.9"
dirs = "3.0"
env_logger = "0.8.3"
log = "0.4.14"
serde = { version = "1.0.124", features = ["derive"] }
typetag = "0.1.7"