[package]
name = "sibyl"
version = "0.1.0"
authors = ["matt wyatt <mwyatt1000@gmail.com>"]
edition = "2018"


[dependencies]
anyhow = "1.0.42"
bincode = "1.3.3"
chrono = { version = "0.4.19", features = ["serde"] }
clap = { version = "2.33.3", features = ["yaml"] }
dirs = "3.0.2"
env_logger = "0.9.0"
log = "0.4.14"
serde = { version = "1.0.127", features = ["derive"] }
typetag = "0.1.7"
